fix: replace Stream.toList with Collectors.toList for Java 11
Agent-Logs-Url: https://github.com/ShahzebSalim/med-device-mgmt-system/sessions/416eb868-2bdc-4f7f-a54f-ebc23df56dd0

Co-authored-by: ShahzebSalim <34137097+ShahzebSalim@users.noreply.github.com>